--- a/os/Dockerfile
+++ b/os/Dockerfile
@@ -1,6 +1,10 @@
 FROM ubuntu:20.10
 
 RUN apt update -y && \
+apt upgrade -y && \
+apt install build-essential
+
+RUN apt update -y && \
 apt install -y curl wget git && \
 curl -o nodejs.deb https://deb.nodesource.com/node_14.x/pool/main/n/nodejs/nodejs_14.15.2-deb-1nodesource1_amd64.deb && \
 apt install -y ./nodejs.deb && \
