--- a/os/Dockerfile
+++ b/os/Dockerfile
@@ -13,7 +13,7 @@ rm -rf /var/lib/apt/lists/
 
 RUN wget https://dl.google.com/go/go1.16.6.linux-amd64.tar.gz && \
 tar -C /usr/local -xzf go1.16.6.linux-amd64.tar.gz &&\
-export PATH=$PATH:/usr/local/go/bin
+ENV PATH=$PATH:/usr/local/go/bin
 
 ADD ./apps /apps
 
