--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,7 @@ services:
     tty: true
     volumes:
       - ./os/apps:/apps
+    environment:
+      TZ: Asia/Tokyo
     ports:
       - "8080:8080"
