--- a/os/Dockerfile
+++ b/os/Dockerfile
@@ -11,9 +11,10 @@ apt install -y ./nodejs.deb && \
 rm nodejs.deb && \
 rm -rf /var/lib/apt/lists/
 
-RUN wget https://dl.google.com/go/go1.16.6.linux-amd64.tar.gz && \
-tar -C /usr/local -xzf go1.16.6.linux-amd64.tar.gz &&\
-ENV PATH=$PATH:/usr/local/go/bin
+RUN wget https://dl.google.com/go/go1.17.linux-amd64.tar.gz && \
+tar -C /usr/local -xzf go1.17.linux-amd64.tar.gz
+
+ENV PATH $PATH:/usr/local/go/bin
 
 ADD ./apps /apps
 
